CONCF-1062 | separate action bindings for row items to prevent bubbling on iOS

--- a/front/styles/main/component/_curated-content-editor.scss
+++ b/front/styles/main/component/_curated-content-editor.scss
@@ -70,6 +70,7 @@ $search-results-load-more-button-width: 100vw - 2 * $search-results-horizontal-p
 }
 
 .curated-content-editor-row {
+	cursor: pointer;
 	display: flex;
 	height: $row-height;
 
